# fate-livestream

./: .gitignore  CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/core/: CMakeLists.txt  core.cpp
src/include/fate/: core.h  gamestate.h  window.h
src/log/: CMakeLists.txt  log.cpp
src/window/: CMakeLists.txt  window.cpp
